--- a/app/src/main/res/drawable/onboarding_selected_dot_orange.xml
+++ b/app/src/main/res/drawable/onboarding_selected_dot_orange.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="6dp"
             android:useLevel="false">
-            <solid android:color="@color/md_deep_orange_300" />
+            <solid android:color="@color/md_teal_600" />
         </shape>
     </item>
 </layer-list>
